opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/bitmex-types"
bug-reports: "https://github.com/vbmithr/bitmex-types/issues"
dev-repo: "git+https://github.com/vbmithr/bitmex-types"
doc: "https://vbmithr.github.io/bitmex-types/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "core" {build >= "v0.13.0"}
  "ptime" {>= "0.8.5"}
  "uuidm" {>= "0.9.7"}
  "sexplib" {>= "v0.13.0"}
  "ppx_sexp_conv" {>= "v0.13.0"}
  "yojson" {>= "1.7.0"}
]
synopsis: "Autogeneration of types from BitMEX API"
description: """
"""
